--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fullcalendar/core": "^4.4.0",
+        "@fullcalendar/daygrid": "^4.4.0",
+        "@fullcalendar/vue": "^4.4.0",
         "admin-lte": "^3.0.2",
         "laravel-echo": "^1.6.1",
         "pusher-js": "^5.0.3",
