--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "laravel-echo": "^1.6.1",
         "pusher-js": "^5.0.3",
         "sweetalert2": "^9.6.0",
+        "vue-full-calendar": "^2.7.0",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.1.5"
     }
